created fundamental components

--- a/views/index.html
+++ b/views/index.html
@@ -3,9 +3,10 @@
 <head>
     <title>React Calendar</title>
 </head>
-<style type="text/css">
-body {
-    font-family: monospace;
-}
-</style>
+<script src="/build/main.js"></script>
+<body>
+  <h1 class="title">React Calendar</h1>
+  <div id="container">
+  </div>
+</body>
 </html>
