--- a/views/index.html
+++ b/views/index.html
@@ -4,8 +4,60 @@
     <title>React Calendar</title>
 </head>
 <script src="/build/main.js"></script>
+<style type="text/css">
+body {
+    font-family: monospace;
+}
+.table {
+    border-collapse: collapse;
+}
+.table caption {
+    font-size: 1.5rem;
+    padding: 10px;
+}
+.table button {
+    font-size: 1rem;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 3px;
+    cursor: pointer;
+}
+.left {
+    float: left;
+}
+.right {
+    float: right;
+}
+.clickable {
+    cursor: pointer;
+}
+.table th {
+    border: 1px solid black;
+    font-weight: bold;
+    text-align: left;
+    padding: 5px;
+}
+.table td {
+    border: 1px solid black;
+    padding: 5px;
+    height: 75px;
+    width: 75px;
+    vertical-align: top;
+}
+.table td.today {
+    border-color: darkred;
+    border-width: 2px;
+    font-weight: bold;
+    color: darkred;
+    padding: 4px;
+}
+.container {
+    position: relative;
+    padding: 10px;
+}
+</style>
 <body>
-  <h1 class="title">React Calendar</h1>
+  <h1 class="title">SoulFood</h1>
   <div id="container">
   </div>
 </body>
