--- a/views/index.html
+++ b/views/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>React Calendar</title>
 </head>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="/build/main.js"></script>
 <style type="text/css">
 body {
