--- a/views/index.html
+++ b/views/index.html
@@ -56,10 +56,47 @@ body {
     position: relative;
     padding: 10px;
 }
+.add-event-form {
+    margin: 50px auto;
+    padding: 10px;
+    width: 50%;
+    display: block;
+    background: #fff;
+    border: 1px solid #333;
+}
+.form-title {
+    text-align: center;
+}
+.add-event-form label {
+    display: block;
+    clear: right;
+    padding: 5px;
+    margin-bottom: 10px;
+}
+.add-event-form input,
+.add-event-form select {
+    width: 60%;
+    float: right;
+}
+.form-controls {
+    margin-top: 20px;
+    text-align: center;
+}
+.form-controls button {
+    margin: 0 5px;
+    padding: 5px;
+}
+.error {
+    color: darkred;
+}
 </style>
 <body>
   <h1 class="title">SoulFood</h1>
-  <div id="container">
+
+  <div id="container" align="left">
+  </div>
+
+  <div id="search" align="right">
   </div>
 </body>
 </html>
